# pmd

./: .gitignore  .gitreview  CONTRIBUTING.md  HyperMake  LICENSE.txt  Makefile  Makefile.am  Makefile.rpm  NOTICE.txt  README.md  api_sddl.conf  configure.ac  go.mod  go.sum  pmd.conf  pmd.service  pmd.spec  pmd.spec.in  pmdclient.pc.in  pmdprivsepd.service  rebuild.sh  rebuildforlightwave.sh  test_harness_testing.c
Documentations/: wide-char-helper-API-description.md
ci/: Dockerfile
client/: Makefile.am  defines.h  demo_api.c  fwmgmt_api.c  gpmgmt_api.c  gpomgmt_api.c  gssapi_creds_plugin.c  includes.h  netmgr_api.c  pkgmgmt_api.c  privsepd_api.c  prototypes.h  rolemgmt_api.c  rpc.c  rpcmem.c  rpcpkgmisc.c  structs.h  usermgmt_api.c  usermgmt_rpc_misc.c
cmd/jwtctl/: jwt.go  (+1 more)
common/: Makefile.am  configreader.c  dcerpcerror.c  defines.h  fwmgmt.c  gpmgmt.c  gssapi_creds_plugin.h  includes.h  memory.c  prototypes.h  rolemgmt.c  rpcsrvutils.c  strings.c  structs.h  usermgmt.c  utils.c
conf/: example.role  grouppolicies.json  pmd-tmpfiles.conf  pmd.conf  restapispec.json  restconfig.txt  server.crt  server.key  server.pub
distribution/: photon-mgmt.toml  photon-mgmtd.service
grouppolicy/: specs.txt
idl/: Makefile.am  demo.idl  demo_privsep.idl  fwmgmt.idl  fwmgmt_privsep.idl  fwmgmtrpctypes.h  gpmgmt.idl  gpomgmt.idl  netmgmt.idl  netmgmt_privsep.idl  netmgmtrpctypes.h  pkgmgmt.idl  pkgmgmt_privsep.idl  pkgmgmtrpctypes.h  pmd.idl  pmdrpctypes.h  privsepd.idl  privseprpctypes.h  rolemgmt.idl  rolemgmtrpctypes.h  rpmostree.idl  rpmostreerpctypes.h  usermgmt.idl  usermgmt_privsep.idl  usermgmtrpctypes.h
include/: pmd.h  pmd_fwmgmt.h  pmd_fwmgmt_types.h  pmd_gpmgmt.h  pmd_gpmgmt_types.h  pmd_gpomgmt.h  pmd_netmgr.h  pmd_pkgmgmt.h  pmd_rolemgmt.h  pmd_rolemgmt_types.h  pmd_usermgmt.h  pmd_usermgmt_types.h  pmderror.h  pmdtypes.h  roleplugin.h
jsonutils/: Makefile.am  includes.h  jsonutils.c  prototypes.h  structs.h
privsep/: Makefile.am  defines.h  fwmgmt_api.c  fwmgmt_rpcapi.c  fwmgmt_utils.c  global.c  global.h  includes.h  netmgmt_utils.c  netmgmt_utils.h  netmgmtrpcapi.c  pkghandlelist.c  pkgmgmt.h  pkgmgmtapi.c  pkgmgmtrpcapi.c  prototypes.h  rpcapi.c  security.c  server.c  structs.h  usermgmt_api.c  usermgmt_rpcapi.c  utils.c
privsep/demo/: Makefile.am  defines.h  demoapi.c  demorpcapi.c  includes.h  prototypes.h
python/: Makefile.am  fwmgmt_py.c  fwmgmt_py.h  includes.h  netmgmt_link_py.c  netmgmt_link_py.h  netmgmt_py.c  netmgmt_py.h  netmgmt_route_py.c  netmgmt_route_py.h  netmgmt_structs_py.h  netmgmt_system_py.c  netmgmt_system_py.h  pkgmgmt_package_py.c  pkgmgmt_package_py.h  pkgmgmt_py.c  pkgmgmt_py.h  pkgmgmt_repodata_py.c  pkgmgmt_repodata_py.h  pkgmgmt_solvedinfo_py.c  pkgmgmt_solvedinfo_py.h  pkgmgmt_utils.c  pmdmodule.c  prototypes.h  rolemgmt_logentry_py.c  rolemgmt_logentry_py.h  rolemgmt_prereq_py.c  rolemgmt_prereq_py.h  rolemgmt_py.c  rolemgmt_py.h  rolemgmt_role_py.c  rolemgmt_role_py.h  server_py.c  server_py.h  setup.py.in  structs.h  utils.c
python/pmd/: __init__.py
restconf/: restapispec.json  restconfig.txt
server/: Makefile.am  api.c  config.c  defines.h  fwmgmt_restapi.c  fwmgmt_rpcapi.c  global.c  global.h  includes.h  netmgmtapi.c  netmgmtrestapi.c  netmgmtrpcapi.c  pkgmgmtapi.c  pkgmgmtrestapi.c  pkgmgmtrpcapi.c  pmdrestapi.c  privsephandlelist.c  prototypes.h  restserver.c  rpc.c  rpmostreeapi.c  server.c  signal.c  structs.h  usermgmt_restapi.c  usermgmt_rpcapi.c  utils.c
server/common/: Makefile.am  defines.h  includes.h  pkgmgmt_utils.c  pkgmgmt_utils.h  prototypes.h  signal.c
server/demo/: Makefile.am  defines.h  demoapi.c  demorestapi.c  demorpcapi.c  includes.h  prototypes.h
server/extras/: Makefile.am  defines.h  fwmgmt_api.c  fwmgmt_restapi.c  fwmgmt_rpcapi.c  fwmgmt_utils.c  includes.h  iptables_rule_parser.c  iptables_script_reader.c  prototypes.h  rolemgmt_api.c  rolemgmt_rpcapi.c  structs.h  usermgmt_api.c  usermgmt_restapi.c  usermgmt_rpcapi.c
server/gpo/: Makefile.am  gpomgmt_api.c  gpomgmt_rpcapi.c  includes.h  prototypes.h
server/grouppolicy/: Makefile.am  defines.h  gpmgmt_rpcapi.c  gpmgmtrpcapi.c  gpsqllogs.c  gpwrappers.c  includes.h  prototypes.h
server/grouppolicy/gplocalpolicyplugin/: Readme.txt
server/grouppolicy/gpmgmtplugin/: Makefile.am  gpmgmtapi.c  gpupdatepolicy.c  includes.h  prototypes.h
server/restutils/: Makefile.am  defines.h  global.c  global.h  includes.h  openidconnect.c  prototypes.h  restauth.c  restbasicauth.c  restnegauth.c  restutils.c  structs.h
server/rolemgmt/: Makefile.am  defines.h  includes.h  prototypes.h  rolemgmt_api.c  rolemgmt_config.c  rolemgmt_global.c  rolemgmt_global.h  rolemgmt_plugin.c  rolemgmt_restapi.c  rolemgmt_rpcapi.c  structs.h
server/security/: Makefile.am  apisecurity.c  authKerberos.c  authKerberos.h  authLdap.c  authLdap.h  authz.c  defines.h  includes.h  pmdsecurity.h  prototypes.h  rsa.c  structs.h  utils.c
tools/: Makefile.am  pmd.spec.in  vmware-rest.pc
tools/cli/: Makefile.am  defines.h  help.c  includes.h  main.c  options.c  parseargs.c  prototypes.h  structs.h  utils.c
tools/cli/demo/: Makefile.am  demo_help.c  demo_main.c  demo_parseargs.c  includes.h  prototypes.h  structs.h
tools/cli/fwmgmt/: Makefile.am  fwmgmt_help.c  fwmgmt_main.c  fwmgmt_parseargs.c  includes.h  prototypes.h  structs.h
tools/cli/gpmgmt/: Makefile.am  gpmgmt_help.c  gpmgmt_main.c  gpmgmt_parseargs.c  includes.h  prototypes.h  structs.h
tools/cli/gpomgmt/: Makefile.am  gpomgmt_help.c  gpomgmt_main.c  gpomgmt_parseargs.c  includes.h  prototypes.h  structs.h
tools/cli/netmgmt/: Makefile.am  includes.h  net_help.c  net_main.c  prototypes.h  structs.h
tools/cli/pkgmgmt/: Makefile.am  defines.h  includes.h  pkg_help.c  pkg_helper.c  pkg_main.c  pkg_options.c  pkg_parseargs.c  prototypes.h  structs.h
tools/cli/rolemgmt/: Makefile.am  includes.h  prototypes.h  rolemgmt_help.c  rolemgmt_main.c  rolemgmt_parseargs.c  structs.h
tools/cli/usermgmt/: Makefile.am  includes.h  prototypes.h  structs.h  usermgmt_help.c  usermgmt_main.c  usermgmt_parseargs.c
(+104 files in other folders)
