noinst_LTLIBRARIES = libusermgmtcli.la

libusermgmtcli_la_CPPFLAGS = \
    -I$(top_srcdir)/include \
    -I$(top_srcdir)/idl \
    -I/opt/likewise/include 

libusermgmtcli_la_SOURCES = \
    usermgmt_help.c \
    usermgmt_main.c \
    usermgmt_parseargs.c

libusermgmtcli_la_LDFLAGS =  \
    -static
